--- a/driveThru/driveThru.html
+++ b/driveThru/driveThru.html
@@ -31,16 +31,20 @@
         <div class="header">
             <h1>melia</h1>
             <div class="nav">
-                <h2><b><a href="index.html">projects</b></a></h2>
+                <h2><a href="../index.html">projects</a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="about/about.html">&nbsp about</a></h2>
+                <h2><a href="../about/about.html">&nbsp about</a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="hobbies/hobbies.html">&nbsp hobbies</a></h2>
+                <h2><a href="../hobbies/hobbies.html">&nbsp hobbies</a></h2>
             </div>
         </div>
 
         <div>
             <h3>"Drive-Thru" Mask</h3>
+        </div>
+
+        <div class="maskSketch">
+            <img src="../images/maskSketch.PNG">
         </div>
 
         <!-- Project Short Info -->
@@ -52,3 +56,63 @@
                 <p><b>Skills:</b> Product Design, User Research, Sewing</p>
             </div>
         </div>
+
+        <div class="timeline">
+            <div class="timeline-item">
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Identifying Issues with Masks</h4>
+                    <p>
+                        For this project my group and I had to create something COVID-19 related. We decided to focus on designing a new mask that would get more people to 
+                        appropriately wear masks. Our first action was to observe situations where people needed masks. We found that people were less likely to wear 
+                        a mask properly while exercising. 
+                    </p>
+                </div>
+            </div>
+            
+            <div class="timeline-item">
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Brainstorming</h4>
+                    <img src="../images/masks.PNG" height="300px">
+                    <p>
+                        We brainstormed many different mask designs that might be able to get athletes to wear a mask properly.
+                    </p>
+                </div>
+            </div>
+            
+            <div class="timeline-item">
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Top Four</h4>
+                    <img src="../images/topThree.PNG" height="300px">
+                    <p>
+                        We created low-fidelity prototypes of our top four mask ideas. 
+                    </p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Testing</h4>
+                    <img src="../images/maskUsers.PNG" height="300px">
+                    <p>
+                        We had users test these masks to find which one was the most comfortable and likely to be used properly. We found that the mask with the flap that
+                        you can open and close ranked highest among users. 
+                    </p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Final Prototype</h4>
+                    <img src="../images/happyMask.PNG" height="300px">
+                    <p>
+                        Finally we created a final prototype of our "Drive-Thru" mask.
+                    </p>
+                </div>
+            </div>     
+        </div>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+          AOS.init();
+        </script>
+    </body>
+</html>
