--- a/exhibit/exhibit.html
+++ b/exhibit/exhibit.html
@@ -31,11 +31,11 @@
         <div class="header">
             <h1>melia</h1>
             <div class="nav">
-                <h2><b><a href="index.html">projects</b></a></h2>
+                <h2><a href="../index.html">projects</a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="about/about.html">&nbsp about</a></h2>
+                <h2><a href="../about/about.html">&nbsp about</a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="hobbies/hobbies.html">&nbsp hobbies</a></h2>
+                <h2><a href="../hobbies/hobbies.html">&nbsp hobbies</a></h2>
             </div>
         </div>
 
@@ -55,44 +55,60 @@
 
         <div class="timeline">
             <div class="timeline-item">
-                <h4>Initial Sketches</h4>
-                <p>
-                    I began by sketching two different ideas for my children's coding exhibit. They each included different coding outputs and different ways of interacting
-                    with the code. My goal was to create an interactive exhibit aimed at elementary aged children to be exposed to basic ideas of coding. I also wanted the exhibit
-                    to be immersive and collaborative.
-                </p>
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Initial Sketches</h4>
+                    <p>
+                        I began by sketching two different ideas for my children's coding exhibit. They each included different coding outputs and different ways of interacting
+                        with the code. My goal was to create an interactive exhibit aimed at elementary aged children to be exposed to basic ideas of coding. I also wanted the exhibit
+                        to be immersive and collaborative.
+                    </p>
+                </div>
             </div>
             
             <div class="timeline-item">
-                <h4>Feedback</h4>
-                <p>
-                    I recieved feedback on how I could make the exhibit more collaborative, and how to integrate a story into it. 
-                </p>
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Feedback</h4>
+                    <p>
+                        I recieved feedback on how I could make the exhibit more collaborative, and how to integrate a story into it. 
+                    </p>
+                </div>
             </div>
             
             <div class="timeline-item">
-                <h4>More Sketching</h4>
-                <p>
-                    I used the feedback I recieved to redesign my exhibit by creating a fairy-tale theme, and integrating a more concrete way to collaborate. 
-                    The children would use the code they create to control characters in a fairy-tale band. 
-                </p>
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>More Sketching</h4>
+                    <p>
+                        I used the feedback I recieved to redesign my exhibit by creating a fairy-tale theme, and integrating a more concrete way to collaborate. 
+                        The children would use the code they create to control characters in a fairy-tale band. 
+                    </p>
+                </div>
             </div>
 
             <div class="timeline-item">
-                <h4>Prototype One</h4>
-                <p>
-                    Since this class was during COVID-19 and I had limited resources to create a whole museum exhibit, I had to be creative when it came to prototyping.
-                    I used stuffed animals, sticky notes, and some beat creation services to create a simple "Wizard of Oz" prototype, which I had my roommates casually test.
-                </p>
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Prototype One</h4>
+                    <p>
+                        Since this class was during COVID-19 and I had limited resources to create a whole museum exhibit, I had to be creative when it came to prototyping.
+                        I used stuffed animals, sticky notes, and some beat creation services to create a simple "Wizard of Oz" prototype, which I had my roommates casually test.
+                    </p>
+                </div>
             </div>
 
             <div class="timeline-item">
-                <h4>Final Prototype</h4>
-                <p>
-                    For my final prototype, I focused on the code blocks and how they would work together. We focused a lot on accesibility in the course so I wanted
-                    my exhibit to be a tactile experience for those who are vision impaired, so I used raised symbols and puzzle-like code blocks. The prototype was still
-                    a "Wizard of Oz" prototype, but I thought more about the system, and decided computer vision would be used to translate the code blocks to actual code that
-                    controlled the fairy-tale band.
-                </p>
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Final Prototype</h4>
+                    <p>
+                        For my final prototype, I focused on the code blocks and how they would work together. We focused a lot on accesibility in the course so I wanted
+                        my exhibit to be a tactile experience for those who are vision impaired, so I used raised symbols and puzzle-like code blocks. The prototype was still
+                        a "Wizard of Oz" prototype, but I thought more about the system, and decided computer vision would be used to translate the code blocks to actual code that
+                        controlled the fairy-tale band.
+                    </p>
+                </div>
             </div>     
         </div>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+          AOS.init();
+        </script>
+    </body>
+</html>
