--- a/leetLink/leetLink.html
+++ b/leetLink/leetLink.html
@@ -31,11 +31,11 @@
         <div class="header">
             <h1>melia</h1>
             <div class="nav">
-                <h2><b><a href="index.html">projects</b></a></h2>
+                <h2><a href="../index.html">projects</a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="about/about.html">&nbsp about</a></h2>
+                <h2><a href="../about/about.html">&nbsp about</a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="hobbies/hobbies.html">&nbsp hobbies</a></h2>
+                <h2><a href="../hobbies/hobbies.html">&nbsp hobbies</a></h2>
             </div>
         </div>
 
@@ -52,3 +52,50 @@
                 <p><b>Skills:</b> UI/UX Design Skills, User Research, Figma, Human-Computer Interaction</p>
             </div>
         </div>
+
+        <div class="timeline">
+            <div class="timeline-item">
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>App Idea</h4>
+                    <p>
+                        My group and I began by pitching our app ideas to each other. My app idea, a way for gamers to connect with other people you play video games, was 
+                        the one that we chose to design. 
+                    </p>
+                </div>
+            </div>
+            
+            <div class="timeline-item">
+                <div data-aos="fade-up" data-aos-duration="700">
+                <h4>Sketch Prototypes</h4>
+                <p>
+                    We did a low fidelity prototype on paper at first. 
+                </p>
+                </div>
+            </div>
+            
+            <div class="timeline-item">
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>User Testing</h4>
+                    <p>
+                        We tested our low fidelity prototype with users and found that because we used a Tinder-esque way of matching, we may run into 
+                        issues with people trying to use our app for dating. This was not something we wanted, but we wanted something that was intuitive for users like the 
+                        card swiping style of matching that dating apps use. This led us to adding rules that must be agreed to when the user signs up. 
+                    </p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Final Prototype</h4>
+                    <p>
+                        Our final prototype is on Figma and is moderately functional. If we were to continue this we would refine the branding, and continue iterating on the design.
+                    </p>
+                </div>
+            </div>     
+        </div>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+          AOS.init();
+        </script>
+    </body>
+</html>
