--- a/legato/legato.html
+++ b/legato/legato.html
@@ -31,11 +31,11 @@
         <div class="header">
             <h1>melia</h1>
             <div class="nav">
-                <h2><b><a href="index.html">projects</b></a></h2>
+                <h2><a href="../index.html">projects</a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="about/about.html">&nbsp about</a></h2>
+                <h2><a href="../about/about.html">&nbsp about</a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="hobbies/hobbies.html">&nbsp hobbies</a></h2>
+                <h2><a href="../hobbies/hobbies.html">&nbsp hobbies</a></h2>
             </div>
         </div>
 
@@ -52,3 +52,64 @@
                 <p><b>Skills:</b> UI/UX Design, User Research, Figma, Human-Computer Interaction</p>
             </div>
         </div>
+
+        <div class="timeline">
+            <div class="timeline-item">
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Needfinding</h4>
+                    <p>
+                        My group and I began by interviewing people interested in activities we knew next to nothing about to see if there were opportunity areas for 
+                        an app. I interviewed someone who is a musical performance major and found that the classical music listening experience is not as good as it could be
+                        as most music listening apps cater to popular music and use the song-album-artist method of categorization, which does not make sense with classical music.
+                    </p>
+                </div>
+            </div>
+            
+            <div class="timeline-item">
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Potential User Research</h4>
+                    <p>
+                        My group and I then interviewed people that would be potential users of the app. This included people who listen to classical music for enjoyment, people
+                        who study classical music, and professors who use it to teach.This was to gain a better understanding of our problem area as none of us are too familiar
+                        with classical music. 
+                    </p>
+                </div>
+            </div>
+            
+            <div class="timeline-item">
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Competitor Research</h4>
+                    <p>
+                        We then researched our competitors such as Spotify, YouTube, and Idagio. None of these seemed to completely cover what classical music listeners need.
+                    </p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Design. Build. Test. Repeat.</h4>
+                    <p>
+                        We started with low fidelity prototyping on paper. We honed in on finding a good search method for classical music, and identified four main ways someone may want to
+                        search for classical music: performer, composer, title, and conductor. We also figured users may want to combine these methods. We tested each of our prototypes and 
+                        refined our design each time.
+                    </p>
+                </div>
+            </div>
+
+            <div class="timeline-item">
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Final Prototype</h4>
+                    <p>
+                        Our final prototype was a wireframe on Figma that used simple buttons to select which way you would like to search. We have a separate playlist tab because
+                        combining playlist with some of our search options would not make sense. Finally our name Legato was chosen because legato means to play
+                        connected and smoothly, which is exactly how our app experience should be. 
+                    </p>
+                </div>
+            </div>     
+        </div>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+          AOS.init();
+        </script>
+    </body>
+</html>
