--- a/theremin/theremin.html
+++ b/theremin/theremin.html
@@ -31,11 +31,11 @@
         <div class="header">
             <h1>melia</h1>
             <div class="nav">
-                <h2><b><a href="../index.html">projects</b></a></h2>
+                <h2><a href="../index.html">projects</a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="about/about.html">&nbsp about</a></h2>
+                <h2><a href="../about/about.html">&nbsp about</a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="hobbies/hobbies.html">&nbsp hobbies</a></h2>
+                <h2><a href="../hobbies/hobbies.html">&nbsp hobbies</a></h2>
             </div>
         </div>
 
@@ -55,41 +55,57 @@
 
         <div class="timeline">
             <div class="timeline-item">
-                <h4>Sketch Idea</h4>
-                <p>
-                    I began with sketching my initial project idea: a theremin made from ultrasonic distance sensors and a raspberry pi. The setup was simple with a sensor
-                    on each side so that, like a theremin, both pitch and volume could be controlled.
-                </p>
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Sketch Idea</h4>
+                    <p>
+                        I began with sketching my initial project idea: a theremin made from ultrasonic distance sensors and a raspberry pi. The setup was simple with a sensor
+                        on each side so that, like a theremin, both pitch and volume could be controlled.
+                    </p>
+                </div>
             </div>
             
             <div class="timeline-item">
-                <h4>Feedback</h4>
-                <p>
-                    I collected feedback from my classmates, and they pushed me to take the idea further and tie it to learning somehow. 
-                </p>
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Feedback</h4>
+                    <p>
+                        I collected feedback from my classmates, and they pushed me to take the idea further and tie it to learning somehow. 
+                    </p>
+                </div>
             </div>
             
             <div class="timeline-item">
-                <h4>More Sketching</h4>
-                <p>
-                    I added a light system to the sketch that allows the user to input a note they would like to learn to play and the lights would respond to how 
-                    close they were to the note. Red would be very far, yellow would be close, and green would be on the note. 
-                </p>
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>More Sketching</h4>
+                    <p>
+                        I added a light system to the sketch that allows the user to input a note they would like to learn to play and the lights would respond to how 
+                        close they were to the note. Red would be very far, yellow would be close, and green would be on the note. 
+                    </p>
+                </div>
             </div>
 
             <div class="timeline-item">
-                <h4>Building and Coding</h4>
-                <p>
-                    I began by building the simple input and output system on the raspberry pi. I then used Python and sonicPi to create the program that allows you to play
-                    music, and the separate learning mode that allows you to learn how to play specific notes. 
-                </p>
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Building and Coding</h4>
+                    <p>
+                        I began by building the simple input and output system on the raspberry pi. I then used Python and sonicPi to create the program that allows you to play
+                        music, and the separate learning mode that allows you to learn how to play specific notes. 
+                    </p>
+                </div>
             </div>
 
             <div class="timeline-item">
-                <h4>Final Project</h4>
-                <p>
-                    For the final project I created a short video talking about how the theremin was made and showing a short demo. If I was to take this project further, I would
-                    add another learning mode that teaches someone how to play songs on the theremin. 
-                </p>
+                <div data-aos="fade-up" data-aos-duration="700">
+                    <h4>Final Project</h4>
+                    <p>
+                        For the final project I created a short video talking about how the theremin was made and showing a short demo. If I was to take this project further, I would
+                        add another learning mode that teaches someone how to play songs on the theremin. 
+                    </p>
+                </div>
             </div>
         </div>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+          AOS.init();
+        </script>
+    </body>
+</html>
