--- a/unityGames/simplePlatformer/index.html
+++ b/unityGames/simplePlatformer/index.html
@@ -27,11 +27,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/simplePlatformer.loader.js";
+      var loaderUrl = buildUrl + "/simplePlatformer2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/simplePlatformer.data.br",
-        frameworkUrl: buildUrl + "/simplePlatformer.framework.js.br",
-        codeUrl: buildUrl + "/simplePlatformer.wasm.br",
+        dataUrl: buildUrl + "/simplePlatformer2.data.br",
+        frameworkUrl: buildUrl + "/simplePlatformer2.framework.js.br",
+        codeUrl: buildUrl + "/simplePlatformer2.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Platformer",
