--- a/unityGames/unityGames.html
+++ b/unityGames/unityGames.html
@@ -33,11 +33,11 @@
         <div class="header">
             <h1>melia</h1>
             <div class="nav">
-                <h2><a href="..\index.html">projects</a></h2>
+                <h2><a href="../index.html">projects</a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="..\index.html">&nbsp about</a></h2>
+                <h2><a href="../about/about.html">&nbsp about</a></h2>
                 <h2>&nbsp | </h2>
-                <h2><a href="..\index.html">&nbsp hobbies</a></h2>
+                <h2><a href="../hobbies/hobbies.html">&nbsp hobbies</a></h2>
             </div>
         </div>
 
@@ -47,8 +47,13 @@
         </div>
 
         <!-- Project Images -->
-        <div>
-            INSERT IMAGES
+        <div class="image-wrapper">
+            <a href="simplePlatformer/index.html">
+                <img src="../images/Screen Shot 2021-12-01 at 1.53.36 PM.png">
+            </a>
+            <a href="kittyCatch/index.html">
+                <img src="../images/Screen Shot 2021-12-01 at 1.58.59 PM.png">
+            </a>
         </div>
 
         <!-- Project Short Info -->
@@ -65,10 +70,10 @@
                 <p>I designed and created these simple 2D Unity Games from scratch for week-long projects in Game Design and Development class. This included finding sprites, using 
                 physics simulators, and coding all of the game mechanics. </p>
 
-                <p>The first game is a simple platformer where you collect coins and avoid obstacles to get to the finish line. Players use the right and left arrow keys or A and D 
+                <p>The first game is a <b>simple platformer</b> where you collect coins and avoid obstacles to get to the finish line. Players use the right and left arrow keys or A and D 
                 to move left and right, and the space bar to jump. </p>
 
-                <p>The second game is a "fruit catch" style game, but way more cute of course. The player moves the basket left and right to catch the falling kitties, but should avoid the evil dogs.
+                <p>The second game is a <b>"fruit catch" style game</b>, but way more cute of course. The player moves the basket left and right to catch the falling kitties, but should avoid the evil dogs.
                 Catching a kittie gives the player one point, while catching a dog causes the player to lose a life. Once the player loses all three lives the game is over and the
                 score is displayed along with the option to restart. </p>
             </div>
