--- a/webGL/webGL.html
+++ b/webGL/webGL.html
@@ -31,7 +31,7 @@
         <div class="header">
             <h1>melia</h1>
             <div class="nav">
-                <h2><b><a href="../index.html">projects</b></a></h2>
+                <h2><a href="../index.html">projects</a></h2>
                 <h2>&nbsp | </h2>
                 <h2><a href="../about/about.html">&nbsp about</a></h2>
                 <h2>&nbsp | </h2>
@@ -67,3 +67,9 @@
                     Mentor</b> (Undergrad TA) in the course. </p>
             </div>
         </div>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+          AOS.init();
+        </script>
+    </body>
+</html>
