--- a/threeArts/threeArts.html
+++ b/threeArts/threeArts.html
@@ -31,7 +31,7 @@
         <div class="header">
             <h1>melia</h1>
             <div class="nav">
-                <h2><b><a href="../index.html">projects</b></a></h2>
+                <h2><a href="../index.html">projects</a></h2>
                 <h2>&nbsp | </h2>
                 <h2><a href="../about/about.html">&nbsp about</a></h2>
                 <h2>&nbsp | </h2>
@@ -69,3 +69,9 @@
         <div class="video-container">
             <iframe width="840" height="473" src="https://www.youtube.com/embed/G_DBzrsdoBA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+          AOS.init();
+        </script>
+    </body>
+</html>
