--- a/unityGames/kittyCatch/index.html
+++ b/unityGames/kittyCatch/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Kitty Catch</title>
+    <title>Unity WebGL Player | Kitty Catch (1)</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -22,16 +22,16 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Kitty Catch</div>
+        <div id="unity-build-title">Kitty Catch (1)</div>
       </div>
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/kittyCatch.loader.js";
+      var loaderUrl = buildUrl + "/kittyCatch2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/kittyCatch.data.br",
-        frameworkUrl: buildUrl + "/kittyCatch.framework.js.br",
-        codeUrl: buildUrl + "/kittyCatch.wasm.br",
+        dataUrl: buildUrl + "/kittyCatch2.data",
+        frameworkUrl: buildUrl + "/kittyCatch2.framework.js",
+        codeUrl: buildUrl + "/kittyCatch2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Kitty Catch (1)",
