--- a/simplePlatformer2/index.html
+++ b/simplePlatformer2/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/simplePlatformer2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/simplePlatformer2.data.br",
-        frameworkUrl: buildUrl + "/simplePlatformer2.framework.js.br",
-        codeUrl: buildUrl + "/simplePlatformer2.wasm.br",
+        dataUrl: buildUrl + "/simplePlatformer2.data",
+        frameworkUrl: buildUrl + "/simplePlatformer2.framework.js",
+        codeUrl: buildUrl + "/simplePlatformer2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Platformer",
