--- a/unityGames/unityGames.html
+++ b/unityGames/unityGames.html
@@ -48,10 +48,10 @@
 
         <!-- Project Images -->
         <div class="image-wrapper">
-            <a href="simplePlatformer/index.html">
+            <a href="simplePlatformer/index.html" target="_blank" rel="noopener noreferrer">
                 <img src="../images/Screen Shot 2021-12-01 at 1.53.36 PM.png">
             </a>
-            <a href="kittyCatch/index.html">
+            <a href="kittyCatch/index.html" target="_blank" rel="noopener noreferrer">
                 <img src="../images/Screen Shot 2021-12-01 at 1.58.59 PM.png">
             </a>
         </div>
