--- a/exhibit/exhibit.html
+++ b/exhibit/exhibit.html
@@ -43,6 +43,9 @@
             <h3>Children's Coding Exhibit</h3>
         </div>
 
+        <div class="mainPic">
+            <img src="../images/exhibit.jpg" class="exhibit">
+        </div>
         <!-- Project Short Info -->
         <div class="shortContainer">
             <div class="shortInfo">
