--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
                     data-aos-duration="700">
                 </a>
                 <a href="theremin/theremin.html">
-                    <img src="images\sketch.png" alt="Sketch of Raspberry Pi Theremin"
-                    onmouseover="this.src= 'images/sketch.png'"
-                    onmouseout="this.src= 'images/sketch.png'"
+                    <img src="images/thereminBW.jpg" alt="Sketch of Raspberry Pi Theremin"
+                    onmouseover="this.src= 'images/theremin-blue.png'"
+                    onmouseout="this.src= 'images/thereminBW.jpg'"
                     data-aos="fade-up"
                     data-aos-duration="700">
                 </a>
                 <a href="exhibit/exhibit.html">
-                <img src="images\sketch.png" alt="Sketch of Children's Coding Exhibit"
-                onmouseover="this.src= 'images/sketch.png'"
-                onmouseout="this.src= 'images/sketch.png'"
+                <img src="images/exhibitBW.jpg" alt="Sketch of Children's Coding Exhibit"
+                onmouseover="this.src= 'images/exhibit-blue.png'"
+                onmouseout="this.src= 'images/exhibitBW.jpg'"
                 data-aos="fade-up"
                 data-aos-duration="700">
                 </a>
