--- a/legato/legato.html
+++ b/legato/legato.html
@@ -42,6 +42,11 @@
         <div>
             <h3>Legato Application</h3>
         </div>
+        <a href="https://www.figma.com/proto/pTGNROnrgmwcWcaeYpgTiG/CS-397---HCI-Studio?node-id=7%3A1&starting-point-node-id=7%3A1" target="_blank" rel="noopener noreferrer">
+            <div class="mainPic">
+                <img src="../images/combineLegato.png" class="combineLegato">
+            </div>
+        </a>
 
         <!-- Project Short Info -->
         <div class="shortContainer">
@@ -88,6 +93,7 @@
             <div class="timeline-item">
                 <div data-aos="fade-up" data-aos-duration="700">
                     <h4>Design. Build. Test. Repeat.</h4>
+                    <img src="../images/legatoPOP.PNG" height="300px">
                     <p>
                         We started with low fidelity prototyping on paper. We honed in on finding a good search method for classical music, and identified four main ways someone may want to
                         search for classical music: performer, composer, title, and conductor. We also figured users may want to combine these methods. We tested each of our prototypes and 
