--- a/theremin/theremin.html
+++ b/theremin/theremin.html
@@ -43,6 +43,10 @@
             <h3>Raspberry Pi Theremin</h3>
         </div>
 
+        <div class="mainPic">
+            <img src="../images/thereminBig.jpg" class="thereminBig">
+        </div>
+
         <!-- Project Short Info -->
         <div class="shortContainer">
             <div class="shortInfo">
