--- a/leetLink/leetLink.html
+++ b/leetLink/leetLink.html
@@ -42,6 +42,11 @@
         <div>
             <h3>LeetLink Application</h3>
         </div>
+        <a href="https://www.figma.com/proto/0MsVBLRM5T915ldu9quEhN/THI-Final-Prototype?node-id=1%3A2&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A2" target="_blank" rel="noopener noreferrer">
+            <div class="mainPic">
+                <img src="../images/combineLL.png" class="combineLL">
+            </div>
+        </a>
 
         <!-- Project Short Info -->
         <div class="shortContainer">
@@ -67,6 +72,7 @@
             <div class="timeline-item">
                 <div data-aos="fade-up" data-aos-duration="700">
                 <h4>Sketch Prototypes</h4>
+                <img src="../images/llPOP.PNG" height="400px">
                 <p>
                     We did a low fidelity prototype on paper at first. 
                 </p>
