--- a/hobbies/hobbies.html
+++ b/hobbies/hobbies.html
@@ -38,3 +38,12 @@
                 <h2><b><a href="hobbies/hobbies.html">&nbsp hobbies</a></b></h2>
             </div>
         </div>
+
+        <div class="blog-container">
+            <div class="grid-container">
+                <div class="blog1">
+                    <img src="../images/setup.jpg">
+                    <figcaption>Building a PC</figcaption>
+                </div>
+            </div>
+        </div>
