--- a/driveThru/driveThru.html
+++ b/driveThru/driveThru.html
@@ -103,7 +103,7 @@
             <div class="timeline-item">
                 <div data-aos="fade-up" data-aos-duration="700">
                     <h4>Final Prototype</h4>
-                    <img src="../images/happyMask.PNG" height="300px">
+                    <img src="../images/happymask.PNG" height="300px">
                     <p>
                         Finally we created a final prototype of our "Drive-Thru" mask.
                     </p>
