--- a/shl/shl.html
+++ b/shl/shl.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="mainPic">
-            <img src="../images/shlColor.PNG" width=700px class="shlColor">
+            <img src="../images/shlColor.png" width=700px class="shlColor">
         </div>
 
         <!-- Project Short Info -->
