get rid of hobbies until it is finished

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <h2><b><a href="index.html">projects</b></a></h2>
                 <h2>&nbsp | </h2>
                 <h2><a href="about/about.html">&nbsp about</a></h2>
-                <h2>&nbsp | </h2>
-                <h2><a href="hobbies/hobbies.html">&nbsp hobbies</a></h2>
+                <!-- <h2>&nbsp | </h2>
+                <h2><a href="hobbies/hobbies.html">&nbsp hobbies</a></h2> -->
             </div>
             <h3>the future of innovative technology lies in human-centered thinking and the mindset
                  that every idea is worth pursuing further</h3>
