--- a/about/about.html
+++ b/about/about.html
@@ -36,8 +36,8 @@
                 <h2><a href="..\index.html">projects</a></h2>
                 <h2>&nbsp | </h2>
                 <h2><b><a href="about/about.html">&nbsp about</a></b></h2>
-                <h2>&nbsp | </h2>
-                <h2><a href="..\hobbies\hobbies.html">&nbsp hobbies</a></h2>
+                <!-- <h2>&nbsp | </h2>
+                <h2><a href="..\hobbies\hobbies.html">&nbsp hobbies</a></h2> -->
             </div>
         </div>
         <div class="about-wrapper">
