--- a/hobbies/hobbies.html
+++ b/hobbies/hobbies.html
@@ -34,8 +34,8 @@
                 <h2><a href="..\index.html">projects</a></h2>
                 <h2>&nbsp | </h2>
                 <h2><a href="..\about/about.html">&nbsp about</a></h2>
-                <h2>&nbsp | </h2>
-                <h2><b><a href="hobbies/hobbies.html">&nbsp hobbies</a></b></h2>
+                <!-- <h2>&nbsp | </h2>
+                <h2><b><a href="hobbies/hobbies.html">&nbsp hobbies</a></b></h2> -->
             </div>
         </div>
 
