--- a/theremin/theremin.html
+++ b/theremin/theremin.html
@@ -34,8 +34,8 @@
                 <h2><a href="../index.html">projects</a></h2>
                 <h2>&nbsp | </h2>
                 <h2><a href="../about/about.html">&nbsp about</a></h2>
-                <h2>&nbsp | </h2>
-                <h2><a href="../hobbies/hobbies.html">&nbsp hobbies</a></h2>
+                <!-- <h2>&nbsp | </h2>
+                <h2><a href="../hobbies/hobbies.html">&nbsp hobbies</a></h2> -->
             </div>
         </div>
 
